[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://matchmaking_scene.gd" id="1"]

[node name="MatchmakingScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="BackgroundVideo" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
autoplay = true
volume = 0.0

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.1, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "FINDING OPPONENT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Searching for worthy opponent..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="HeroDisplay" type="Panel" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 200)

[node name="HeroInfo" type="Label" parent="VBoxContainer/HeroDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "YOUR CHAMPION

Hero Name
Stats and Abilities"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MatchmakingProgress" type="Panel" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(400, 150)

[node name="ProgressInfo" type="Label" parent="VBoxContainer/MatchmakingProgress"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "MATCHMAKING QUEUE

Position: Searching...
ELO Range: ±100
Estimated Time: <30s"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OpponentInfo" type="Panel" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(400, 150)
visible = false

[node name="OpponentDetails" type="Label" parent="VBoxContainer/OpponentInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "OPPONENT FOUND

Player Name
ELO Rating: 1000
Preparing for battle..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="TouchControls" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 100)
alignment = 1

[node name="CancelButton" type="Button" parent="VBoxContainer/TouchControls"]
layout_mode = 2
custom_minimum_size = Vector2(300, 80)
text = "❌ CANCEL MATCHMAKING"

[node name="BackMenuButton" type="Button" parent="VBoxContainer/TouchControls"]
layout_mode = 2
custom_minimum_size = Vector2(300, 80)
text = "🏠 BACK TO MENU"
